--- a/war/index.html
+++ b/war/index.html
@@ -4,7 +4,7 @@
 <meta http-equiv="content-type" content="text/html; charset=UTF-8">
 <link type="text/css" rel="stylesheet" href="styles/font-awesome-4.0.3/css/font-awesome.css">
 <link rel="shortcut icon" href="images/csdms1.ico">	
-<title>CSDMS Web Modeling Tool</title>
+<title>Permafrost Benchmark System</title>
 <script type="text/javascript" src="wmt/wmt.nocache.js"></script>
 </head>
 <body>
